--- a/src/LrsCore/LrsCore.csproj
+++ b/src/LrsCore/LrsCore.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="YiJingFramework.EntityRelations" Version="2.5.0" />
+  </ItemGroup>
+
 </Project>
