--- a/src/LrsCore/LrsCore.csproj
+++ b/src/LrsCore/LrsCore.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="YiJingFramework.EntityRelations" Version="3.0.0" />
+    <PackageReference Include="YiJingFramework.Nongli" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
